fix footer spacing for mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -68,8 +68,14 @@
     padding-top: 20px;
   }
 
+  .insta {
+    text-align: center;
+    width: 100%;
+  }
+
   .insta img {
     margin: 20px;
+    width: 15rem;
   }
 
   .social {
